# cyoda-ai-studio

./: .augment-guidelines  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  ADK_CODE_EXAMPLES.md  ADK_FINDINGS_SUMMARY.md  ADK_IMPLEMENTATION_GUIDE.md  AGENT_IMPROVEMENTS_SUMMARY.md  AUTHENTICATION_CHECKLIST.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  AUTHENTICATION_VERIFICATION.md  BUILD_AUTOMATION.md  COMPLETE_HOOK_FRAMEWORK_SUMMARY.md  CREDENTIAL_REUSE_GUIDE.md  CYODA_API_USAGE_ANALYSIS.md  CYODA_DATA_AGENT_EXAMPLES.md  CYODA_DATA_AGENT_QUICK_REFERENCE.md  CYODA_DATA_AGENT_SUMMARY.md  CYODA_DATA_AGENT_TOOLS.md  CYODA_DATA_AGENT_UPDATES.md  DIALOGUE_ALIGNMENT_ANALYSIS.md  DIALOGUE_DIRECTORY_SUMMARY.md  Dockerfile  GEMINI.md  GOOGLE_ADK_IMPLEMENTATION_REVIEW.md  GOOGLE_ADK_REVIEW_COMPLETE.md  HOOK_FRAMEWORK_ARCHITECTURE.md  HOOK_FRAMEWORK_CHECKLIST.md  HOOK_FRAMEWORK_DESIGN.md  HOOK_FRAMEWORK_IMPLEMENTATION.md  HOOK_FRAMEWORK_INDEX.md  HOOK_FRAMEWORK_INTEGRATION.md  HOOK_FRAMEWORK_README.md  HOOK_FRAMEWORK_SUMMARY.md  LOGS_IMPLEMENTATION.md  METRICS_IMPLEMENTATION.md  Makefile  PHASE_4_INTEGRATION_SUMMARY.md  PROCESS_MANAGER_ARCHITECTURE.md  (+22 more)
.claude/: instructions.md
.github/workflows/: ci-cd.yml
application/: SDK_CONFIGURATION.md  app.py  report.html  tach.toml
application/agents/: EXAMPLE_DIALOGUES_INDEX.md  TEST_GITHUB_AGENT_BUILD_WORKFLOW.md  __init__.py  agent.py  cyoda_assistant.py  eval_mocking.py  llm_guidelines.md  openai_agents.py  validate_evals.py
application/agents/api_data_agent/: __init__.py  agent.py
application/agents/build_app/: __init__.py  agent.py  augment_build.sh  augment_build_mock.sh  tools.py
application/agents/canvas/: __init__.py  agent.py  models.py  openai_agent.py  tools.py
application/agents/coordinator/: __init__.py  agent.py  coordinator.evalset.json
application/agents/cyoda_assistant/: __init__.py  agent.py  evalsetf5929f.evalset.json  factories.py  wrapper.py
application/agents/cyoda_data_agent/: __init__.py  agent.py  openai_agent.py  openapi.json  tools.py  user_service_container.py
application/agents/dialogues/: README.md  build_app.md  build_for_existing_branch.md  e2e.md  example_dialogue_1.md  scenarios.md  test_canvas_hooks_dialogue.json  test_prompt_hooks_dialogue.json  ui_hooks_test_prompts.md
application/agents/environment/: LOG_COLLECTION_FIX.md  MISSING_HOOKS_ISSUE.md  PROMPT_IMPROVEMENTS.md  __init__.py  agent.py  openai_agent.py  test_prompts.md  tools.py
application/agents/environment_mcp/: __init__.py  agent.py
application/agents/github/: WORKFLOW_SCANNING_FIX.md  __init__.py  agent.py  openai_agent.py  refactoring_plan.md  test_prompts.md  tools.py
application/agents/guidelines/: __init__.py  agent.py  openai_agent.py  tools.py
application/agents/monitoring/: __init__.py  agent.py  tools.py
application/agents/prompts/: __init__.py  build_agent.template  (+11 more)
application/common/: namespace_builder.py
application/config/: streaming_config.py
application/entity/: __init__.py
application/models/: __init__.py  request_models.py  response_models.py
application/processor/: customer_processor.py
application/repositories/: __init__.py  conversation_repository.py  task_repository.py
application/routes/: __init__.py  agent_routes.py  chat.py  labels_config.py  logs.py  metrics.py  repository_routes.py  tasks.py  token.py
application/services/: README_LIMITS.md  __init__.py  chat_service.py  cloud_manager_service.py  config_service.py  cyoda_session_service.py  edge_message_persistence_service.py  environment_management_service.py  environment_service.py  github_service_factory.py  google_adk_service.py  logs_service.py  metrics_service.py  openai_agents_service.py  openai_assistant_wrapper.py  openai_sdk_service.py  openai_vision_service.py  repository_parser.py  sdk_factory.py  service_factory.py  streaming_service.py  task_service.py
application/utils/: stream_monitor.py
common/auth/: auth0_jwks.py
common/config/: config.py  conts.py
common/constants/: __init__.py
common/exception/: exceptions.py
common/middleware/: __init__.py  auth_middleware.py
common/proto/: cloudevents.proto  cloudevents_pb2.py  cyoda_cloud_api_pb2.py  cyoda_cloud_api_pb2_grpc.py
common/search/: __init__.py  condition_builder.py  condition_converter.py  operators.py
common/service/: entity_service.py  service.py
common/utils/: jwt_utils.py  utils.py
cyoda_mcp/integration/: cursor_http.json  cursor_stdio.json
cyoda_mcp/mcp_services/: deployment.py  entity_management.py  search.py
cyoda_mcp/tools/: search.py
docs/: HOOK_FRAMEWORK_DESIGN.md
helm/: Chart.yaml
llm_docs/: README.md  SUMMARY.md  __init__.py  generate_docs_sitemap.py  main.py  scrape_cyoda_api_docs.py
llm_docs/converters/: __init__.py  docs_fetcher.py  openapi_converter.py
llm_docs/outputs/: cyoda-api-descriptions-llms.txt  cyoda-api-sitemap-llms.txt  cyoda-docs-llms.txt
llm_docs/sources/: download_sources.sh  sitemap.xml
llm_docs/tests/: __init__.py  test_docs_fetcher.py  test_openapi_converter.py
scripts/: generate_openapi_docs.py  generate_proto.sh  open-reports.sh  run_agent_evals.sh  run_build_agent_eval_real.sh  setup-dev.sh
services/: services.py
tests/: conftest.py  test_clone_repository_config_persistence.py  test_cloud_window_hook.py  test_cyoda_response_plugin.py  test_deployment_hook.py  test_hook_statelessness.py  test_open_canvas_tab.py  test_prompt_hooks.py
tests/fixtures/: conversation_fixtures.py
tests/integration/: test_auth_expired_token.py  test_chat_history_integration.py  test_cli_process_integration.py  test_dialogue_1.py  test_generate_code_integration.py  test_github_services_integration.py  test_repository_auth_complete.py  test_token_routes.py
tests/repositories/: test_conversation_repository.py
tests/services/: test_chat_service.py
tests/unit/: README.md  test_cli_process.py  test_cyoda_repository.py  test_edge_message_persistence_service.py  test_entity_service_impl.py  test_save_sample_entity.py  test_send_request_401_fix.py  test_temporal_queries.py
(+920 files in other folders)
